# SolarPINN

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: test_progress.py
solarpinn/: trainer.py
solarpinn/config/: __init__.py  constants.py  paths.py  settings.py
solarpinn/losses/: __init__.py  loss.py  mse.py  pinn_loss.py
solarpinn/nn/: __init__.py  activations.py  containers.py  initialization.py  linear.py  losses.py  module.py  parameter.py
solarpinn/optim/: __init__.py  adam.py  optimizer.py  sgd.py
solarpinn/pde/: equation.py  poisson.py
solarpinn/physics/: __init__.py  curl.py  divergence.py  gradients.py  hessian.py  jacobian.py  laplacian.py
solarpinn/pinn/: __init__.py  boundary.py  initial.py  pde.py
solarpinn/samplers/: __init__.py  latin_hypercube.py  sampler.py  sobol.py  uniform.py
solarpinn/utils/: __init__.py  device.py  exceptions.py  io.py  logger.py  seed.py  timer.py
tests/: test_trainer.py
tests/losses/: test_losses.py  test_mse.py  test_pinn_loss.py
tests/nn/: test_activations.py  test_containers.py  test_initialization.py  test_linear.py  test_losses.py  test_module.py  test_parameter.py
tests/optim/: __init__.py  test_adam.py  test_optimizer.py  test_sgd.py
tests/pde/: test_equation.py  test_poisson.py
tests/physics/: test_curl.py  test_divergence.py  test_gradients.py  test_hessian.py  test_jacobian.py  test_laplacian.py
tests/pinn/: test_boundary.py  test_initial.py  test_pde.py
tests/samplers/: test_latin_hypercube.py  test_samplers.py  test_sobol.py  test_uniform.py
(+7 files in other folders)
