[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solarpinn"
version = "0.1.0"
description = "Physics-Informed Neural Networks for Solar Physics"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["solarpinn*"]